# TT-Tester

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  build.yml  ci.yml  code-coverage.yml  coverage.yml  test.yml
src/: device.rs  main.rs  sender.rs  serialdevice.rs  serialworker.rs  udpdevice.rs  udpworker.rs  workers.rs
tools/: create_serial_port_pair.sh  create_virtual_device.sh  start_virtual_device.sh  stop_virtual_device.sh
