[package]
name = "bridge-tester"
version = "0.1.0"
edition = "2021"
authors = ["Han Liu <liuhan211211@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive", "wrap_help"] }
anyhow = {version = "1.0.65", features = ["backtrace"]}
serialport = "4.2.0"
bus = "2.3.0"
test-context = "0.1.4"
url = "2.3.1"