[package]
name = "ser2tcp-tester"
version = "0.1.0"
edition = "2021"
authors = ["Han Liu <liuhan211211@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive", "wrap_help", "cargo"] }
anyhow = {version = "1.0.65", features = ["backtrace"]}
serialport = "4.2.0"
signal-hook = "0.3.14"
ctrlc = "3.2.4"
chrono = "0.4.23"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install -y libudev-dev"]